# GKI2026

./: .gitignore  analyze_diff.py  benchmark_sim.py  en6zXiBb  enAtsg72  enNOgFZ5  enSZzfob  eneVpD9v  enujD3b2  envAHTLE  packages.txt  requirements.txt  temp_04b6f885.inp  temp_266550b7.inp  temp_266550b7.rpt  temp_2af7a6b4.inp  temp_2af7a6b4.rpt  temp_3ca7b2c9.inp  temp_3f93d596.inp  temp_3f93d596.rpt  temp_8a1babc7.inp  temp_8a1babc7.rpt  temp_8a6a084b.inp  temp_a97111ef.inp  temp_b686fde7.inp  temp_b686fde7.rpt  temp_c9c96c1e.inp  temp_c9c96c1e.rpt  temp_d39f052a.inp  temp_d39f052a.rpt  temp_e44f4960.inp  verify_model.py
NLP_problem/: compare_whisper.py  (+3 more)
NLP_problem/gki-evaluator-main/: .gitignore  README.md  TESTING_PLAN.md  TODO.md  pyproject.toml
NLP_problem/gki-evaluator-main/data/: data-00000-of-00001.arrow  state.json
NLP_problem/gki-evaluator-main/docker/: Dockerfile  scoring.py
NLP_problem/gki-evaluator-main/docs/: scoring_analysis.md  test_report.md
NLP_problem/gki-evaluator-main/examples/dummy/: package.py
NLP_problem/gki-evaluator-main/examples/dummy/submission/: model.py
NLP_problem/gki-evaluator-main/examples/gpt2/: README.md  package.py
NLP_problem/gki-evaluator-main/examples/gpt2/submission/: model.py
NLP_problem/gki-evaluator-main/examples/mlp/: train.py
NLP_problem/gki-evaluator-main/src/gki_evaluator/: __init__.py  evaluate.py
NLP_problem/gki-evaluator-main/tests/: run_all_tests.sh  test_context_building.py  test_edge_cases.py  test_integration.py  test_scoring.py  test_security.py  test_zip_validation.py  validate_scores.py
(+972 files in other folders)
