[project]
name = "gki-evaluator"
version = "0.1.0"
description = "Evaluation system for tiny byte-level language model submissions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "datasets",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
]

[project.scripts]
evaluate = "gki_evaluator.evaluate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gki_evaluator"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
